--- a/templates/group.html
+++ b/templates/group.html
@@ -9,7 +9,7 @@
         {{ group.description }}
     </p>  
 
-    {% for post in posts %}  
+    {% for post in page %}  
         <h4>
             Автор: {{ post.author.get_full_name }}.
             Дата публикации: {{ post.pub_date|date:"d M Y" }}
@@ -17,4 +17,5 @@
         <p>{{ post.text|linebreaksbr }}</p>
         <hr>
     {% endfor %}
+    {% include "paginator.html" %}
 {% endblock %}  
