--- a/templates/post.html
+++ b/templates/post.html
@@ -3,57 +3,73 @@
 {% load user_filters %}
 <main role="main" class="container">
     <div class="row">
-            <div class="col-md-3 mb-3 mt-1">
-                <div class="card">
-                        <div class="card-body">
-                                <div class="h2">
-                                    <!-- Имя автора -->
-                                    {{ profile.get_full_name }}
-                                </div>
-                                <div class="h3 text-muted">
-                                     <!-- username автора -->
-                                     {{ profile.username }}
-                                </div>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                                <li class="list-group-item">
-                                        <div class="h6 text-muted">
-                                        Подписчиков: XXX <br />
-                                        Подписан: XXX
-                                        </div>
-                                </li>
-                                <li class="list-group-item">
-                                        <div class="h6 text-muted">
-                                            <!--Количество записей -->
-                                            Записей: {{ count }}
-                                        </div>
-                                </li>
-                        </ul>
+        <div class="col-md-3 mb-3 mt-1">
+            <div class="card">
+               <div class="card-body">
+                    <div class="h2">
+                        <!-- Имя автора -->
+                        <a href="{% url 'profile' author.username %}">
+                            {{ author.get_full_name }}
+                        </a>
+                    </div>
+                    <div class="h3 text-muted">
+                        <!-- username автора -->
+                        {{ author.username }}
+                    </div>
                 </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <div class="h6 text-muted">
+                            Подписчиков: XXX <br />
+                            Подписан: XXX
+                        </div>
+                    </li>
+                    <li class="list-group-item">
+                        <div class="h6 text-muted">
+                            <!--Количество записей -->
+                            Записей: {{ author.posts.count }}
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-
         <div class="col-md-9">
-
             <!-- Пост -->  
-                <div class="card mb-3 mt-1 shadow-sm">
-                        <div class="card-body">
-                                <p class="card-text">
-                                        <!-- Ссылка на страницу автора в атрибуте href; username автора в тексте ссылки -->
-                                        <a href="{% url 'profile' profile.username %}"><strong class="d-block text-gray-dark">{{ profile.get_full_name }}</strong></a>
-                                        <!-- Текст поста -->
-                                        {{ view_post.text }}
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group ">
-                                                <!-- Ссылка на редактирование, показывается только автору записи -->
-                                                <a class="btn btn-sm text-muted" href="{% url 'post_edit' profile.username view_post.id %}"" role="button">Редактировать</a>
-                                        </div>
-                                        <!-- Дата публикации  -->
-                                        <small class="text-muted">{{ view_post.pub_date }}</small>
-                                </div>
+            <div class="card mb-3 mt-1 shadow-sm">
+                {% load thumbnail %}
+                {% thumbnail view_post.image "960x339" crop="center" upscale=True as im %}
+                    <img class="card-img" src="{{ im.url }}">
+                {% endthumbnail %}
+                <div class="card-body">
+                    <p class="card-text">
+                        <!-- Ссылка на страницу автора в атрибуте href; username автора в тексте ссылки -->
+                        <a href="{% url 'profile' author.username %}">
+                            <strong class="d-block text-gray-dark">
+                                {{ view_post.author.get_full_name }}
+                            </strong>
+                        </a>
+                        <!-- Текст поста -->
+                        {{ view_post.text|linebreaksbr }}
+                    </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group ">
+                            {% if request.user.username == author.username %}
+                                <!-- Ссылка на редактирование, показывается только автору записи -->
+                                <a class="btn btn-sm text-muted"
+                                    href="{% url 'post_edit' author.username view_post.id %}"
+                                    role="button">
+                                        Редактировать
+                                </a>
+                            {% endif %}
                         </div>
+                        <!-- Дата публикации  -->
+                        <small class="text-muted">
+                            {{ view_post.pub_date }}
+                        </small>
+                    </div>
                 </div>
-     </div>
+            </div>
+        </div>
     </div>
 </main>
 {% endblock %}
