--- a/templates/group.html
+++ b/templates/group.html
@@ -4,12 +4,16 @@
 {% endblock %}
   
 {% block content %}
+{% load thumbnail %}
     <h1>{{ group.title }}</h1>
     <p>
         {{ group.description|linebreaksbr }}
     </p>  
 
-    {% for post in page %}  
+    {% for post in page %}
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img" src="{{ im.url }}">
+        {% endthumbnail %}
         <h4>
             Автор: <a href="{% url 'profile' post.author.username %}">{{ post.author.get_full_name }}.</a>
             Дата публикации: {{ post.pub_date|date:"d M Y" }}
