--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,12 @@
 {% block title %}Последние обновления{% endblock %}
 {% block header %}Последние обновления на сайте{% endblock %}
 {% block content %}
+{% load thumbnail %}
 
     {% for post in page %}
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img" src="{{ im.url }}">
+        {% endthumbnail %}
         <h4>
             Автор: <a href="{% url 'profile' post.author.username %}">{{ post.author.get_full_name }}.</a>
             Дата публикации: {{ post.pub_date|date:"d M Y" }}.
