--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 {% load user_filters %}
+{% load thumbnail %}
 <main role="main" class="container">
     <div class="row">
         <div class="col-md-3 mb-3 mt-1">
@@ -31,77 +32,41 @@
             </div>
         </div>
         <div class="col-md-9">                
-            {% if paginator.count %}
-                {% for post in page %}
-                    {% if paginator.count == 0 %}
-                        <div class="card mb-3 mt-1 shadow-sm">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    <a href="{% url 'profile' post.author.username %}">
-                                        <strong class="d-block text-gray-dark">
-                                            {{ post.author.get_full_name }}
-                                        </strong>
-                                    </a>
-                                    {{ post.text|linebreaksbr }}
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group ">
-                                        <!-- Ссылка на страницу записи в атрибуте href-->
-                                        <a class="btn btn-sm text-muted"
-                                        href="{% url 'post' post.username post.id %}"
-                                        role="button">
-                                            Добавить комментарий
-                                        </a>
-                                        <!-- Ссылка на редактирование, показывается только автору записи -->
-                                        {% if request.user.username == author.username %}
-                                            <a class="btn btn-sm text-muted"
-                                            href="{% url 'post_edit' post.username post.id %}"
-                                            role="button">
-                                                Редактировать
-                                            </a>
-                                        {% endif %}
-                                    </div>
-                                    <small class="text-muted">
-                                        {{ post.pub_date }}
-                                    </small>
-                                </div>
-                            </div>
-                        </div>
-                    {% endif %}
-                    
-                    <p>
-                        <i>{{ post.text|linebreaksbr }}</i>
-                    </p>
-                    {% if post.group %}
-                        <h6>
-                            Группа: 
-                            <a  href="{% url 'group' post.group.slug %}">
-                                {{ post.group.title }}
-                            </a>
-                        </h6>
-                    {% endif %}
-                    <div class="btn-group ">
-                        
-                        <!-- Ссылка на страницу записи в атрибуте href-->
-                        <a class="btn btn-sm text-muted"
-                        href="{% url 'post' author.username post.id %}"
-                        role="button">
-                            Добавить комментарий
+            {% for post in page %}
+                {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+                    <img class="card-img" src="{{ im.url }}">
+                {% endthumbnail %}
+                <p>
+                    <i>{{ post.text|linebreaksbr }}</i>
+                </p>
+                {% if post.group %}
+                    <h6>
+                        Группа: 
+                        <a  href="{% url 'group' post.group.slug %}">
+                            {{ post.group.title }}
                         </a>
-                        {% if request.user.username == author.username %}
-                            <!-- Ссылка на редактирование, показывается только автору записи -->
-                            <a class="btn btn-sm text-muted"
-                            href="{% url 'post_edit' author.username post.id %}"
-                            role="button">
-                                Редактировать
-                            </a>
-                        {% endif %}
-                    </div>
-                    {% if not forloop.last %}
-                        <hr>
+                    </h6>
+                {% endif %}
+                <div class="btn-group ">
+                    <!-- Ссылка на страницу записи в атрибуте href-->
+                    <a class="btn btn-sm text-muted"
+                    href="{% url 'post' author.username post.id %}"
+                    role="button">
+                        Добавить комментарий
+                    </a>
+                    {% if request.user.username == author.username %}
+                        <!-- Ссылка на редактирование, показывается только автору записи -->
+                        <a class="btn btn-sm text-muted"
+                        href="{% url 'post_edit' author.username post.id %}"
+                        role="button">
+                            Редактировать
+                        </a>
                     {% endif %}
-                {% endfor %}
-            {% endif %} 
+                </div>
+                {% if not forloop.last %}
+                    <hr>
+                {% endif %}
+            {% endfor %} 
             {% include "paginator.html" %}
         </div>
     </div>
