--- a/templates/post.html
+++ b/templates/post.html
@@ -4,79 +4,14 @@
 {% load thumbnail %}
 <main role="main" class="container">
     <div class="row">
-        <div class="col-md-3 mb-3 mt-1">
-            <div class="card">
-               <div class="card-body">
-                    <div class="h2">
-                        <!-- Имя автора -->
-                        <a href="{% url 'profile' view_post.author.username %}">
-                            {{ view_post.author.get_full_name }}
-                        </a>
-                    </div>
-                    <div class="h3 text-muted">
-                        <!-- username автора -->
-                        {{ view_post.author.username }}
-                    </div>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="h6 text-muted">
-                            Подписчиков: XXX <br />
-                            Подписан: XXX
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="h6 text-muted">
-                            <!--Количество записей -->
-                            Записей: {{ view_post.author.posts.count }}
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        
+        {% include "post_sidebar.html" with author=author %}
+        
         <div class="col-md-9">
             <!-- Пост -->  
-            <div class="card mb-3 mt-1 shadow-sm">
-                {% thumbnail view_post.image "960x339" crop="center" upscale=True as im %}
-                    <img class="card-img" src="{{ im.url }}">
-                {% endthumbnail %}
-                <div class="card-body">
-                    <p class="card-text">
-                        <!-- Ссылка на страницу автора в атрибуте href; username автора в тексте ссылки -->
-                        <a href="{% url 'profile' view_post.author.username %}">
-                            <strong class="d-block text-gray-dark">
-                                {{ view_post.author.get_full_name }}
-                            </strong>
-                        </a>
-                        <!-- Текст поста -->
-                        {{ view_post.text|linebreaksbr }}
-                    </p>
-                    {% if view_post.group %}
-                        <h6>
-                            Группа: 
-                            <a  href="{% url 'group' view_post.group.slug %}">
-                                {{ view_post.group.title }}
-                            </a>
-                        </h6>
-                    {% endif %}
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group ">
-                            {% if request.user.username == view_post.author.username %}
-                                <!-- Ссылка на редактирование, показывается только автору записи -->
-                                <a class="btn btn-sm text-muted"
-                                    href="{% url 'post_edit' view_post.author.username view_post.id %}"
-                                    role="button">
-                                        Редактировать
-                                </a>
-                            {% endif %}
-                        </div>
-                        <!-- Дата публикации  -->
-                        <small class="text-muted">
-                            {{ view_post.pub_date }}
-                        </small>
-                    </div>
-                </div>
-            </div>
+            
+            {% include "post_item.html" with post=post %}
+            
             {% include "comments.html" %}
         </div>
     </div>
