--- a/templates/index.html
+++ b/templates/index.html
@@ -3,22 +3,16 @@
 {% block header %}Последние обновления на сайте{% endblock %}
 {% block content %}
 {% load thumbnail %}
+{% load cache %}
 
-    {% for post in page %}
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img" src="{{ im.url }}">
-        {% endthumbnail %}
-        <h4>
-            Автор: <a href="{% url 'profile' post.author.username %}">{{ post.author.get_full_name }}.</a>
-            Дата публикации: {{ post.pub_date|date:"d M Y" }}.
-            {% if post.group %}
-                Группа: <a href="{% url 'group' post.group.slug %}">{{ post.group.title }}</a>
-            {% endif %}
-        </h4>
-        <p>{{ post.text|linebreaksbr }}</p>
-        {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
+    {% cache 20 index page %}
+        {% for post in page %}
+            {% include "post_item.html" with post=post %}
+        {% endfor %}
+    {% endcache %}
 
-    {% include "paginator.html" %}
+    {% if page.has_other_pages %}
+        {% include "paginator.html" with items=page paginator=paginator %}
+    {% endif %}
 
 {% endblock %}
