--- a/templates/new.html
+++ b/templates/new.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    {% if post %}Редактирование записи{% else %}Новая запись{% endif %}
+    {% if post %}Страница редактирования записи{% else %}Страница создания новой записи{% endif %}
 {% endblock %}
 {% block content %}
 {% load user_filters %}
@@ -9,40 +9,41 @@
         <div class="card">
             <div class="card">
                 <div class="card-header">
-                    {% if post %}Редактировать запись{% else %}Добавить запись{% endif %}
+                    {% if post %}Форма для редактирования записи{% else %}Форма для создания записи{% endif %}
                 </div>
-            <div class="card-body">
-                <form method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
+                <div class="card-body">
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
 
-                    {% for field in form %}
-                        <div class="form-group row"
-                            aria-required=
-                            {% if field.field.required %}
-                                "true"
-                            {% else %}
-                                "false"
-                            {% endif %}>
-                            <label 
-                                for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}
-                                    {% if field.field.required %}
-                                        <span class="required">*</span>
+                        {% for field in form %}
+                            <div class="form-group row"
+                                aria-required=
+                                {% if field.field.required %}
+                                    "true"
+                                {% else %}
+                                    "false"
+                                {% endif %}>
+                                <label 
+                                    for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}
+                                        {% if field.field.required %}
+                                            <span class="required">*</span>
+                                        {% endif %}
+                                </label>
+                                <div class="col-md-6">
+
+                                    {{ field|addclass:"form-control" }}
+
+                                    {% if field.help_text %}
+                                        <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
                                     {% endif %}
-                            </label>
-                            <div class="col-md-6">
-
-                                {{ field|addclass:"form-control" }}
-
-                                {% if field.help_text %}
-                                    <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
-                                {% endif %}
-                            </div>                
-                        </div>
-                    {% endfor %}
-                    <button type="submit" class="btn btn-primary">
-                        {% if post %}Сохранить{% else %}Опубликовать{% endif %}
-                    </button>
-                </form>
+                                </div>                
+                            </div>
+                        {% endfor %}
+                        <button type="submit" class="btn btn-primary">
+                            {% if post %}Сохранить{% else %}Опубликовать{% endif %}
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
