--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,70 +4,17 @@
 {% load thumbnail %}
 <main role="main" class="container">
     <div class="row">
-        <div class="col-md-3 mb-3 mt-1">
-            <div class="card">
-                <div class="card-body">
-                    <div class="h2">
-                        <a href="{% url 'profile' author.username %}">
-                            {{ author.get_full_name }}
-                        </a>
-                    </div>
-                    <div class="h3 text-muted">
-                        {{ author.username }}
-                    </div>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <div class="h6 text-muted">
-                            Подписчиков: XXX <br />
-                            Подписан: XXX
-                        </div>
-                    </li>
-                    <li class="list-group-item">
-                        <div class="h6 text-muted">
-                            Записей: {{ paginator.count }}
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
+
+        {% include "post_sidebar.html" with author=author %}
+        
         <div class="col-md-9">                
             {% for post in page %}
-                {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-                    <img class="card-img" src="{{ im.url }}">
-                {% endthumbnail %}
-                <p>
-                    <i>{{ post.text|linebreaksbr }}</i>
-                </p>
-                {% if post.group %}
-                    <h6>
-                        Группа: 
-                        <a  href="{% url 'group' post.group.slug %}">
-                            {{ post.group.title }}
-                        </a>
-                    </h6>
-                {% endif %}
-                <div class="btn-group ">
-                    <!-- Ссылка на страницу записи в атрибуте href-->
-                    <a class="btn btn-sm text-muted"
-                    href="{% url 'post' author.username post.id %}"
-                    role="button">
-                        Добавить комментарий
-                    </a>
-                    {% if request.user.username == author.username %}
-                        <!-- Ссылка на редактирование, показывается только автору записи -->
-                        <a class="btn btn-sm text-muted"
-                        href="{% url 'post_edit' author.username post.id %}"
-                        role="button">
-                            Редактировать
-                        </a>
-                    {% endif %}
-                </div>
-                {% if not forloop.last %}
-                    <hr>
-                {% endif %}
-            {% endfor %} 
-            {% include "paginator.html" %}
+                {% include "post_item.html" with post=post %}
+            {% endfor %}
+
+            {% if page.has_other_pages %}
+                {% include "paginator.html" with items=page paginator=paginator %}
+            {% endif %}
         </div>
     </div>
 </main>
