--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% block title %}Просмотр записи{% endblock %}
+{% block header %}Просмотр записи{% endblock %}
 {% block content %}
 {% load user_filters %}
 {% load thumbnail %}
