--- a/templates/new.html
+++ b/templates/new.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    {% if post %}Страница редактирования записи{% else %}Страница создания новой записи{% endif %}
+    {% if post %}Редактирование записи{% else %}Добавление новой записи{% endif %}
 {% endblock %}
 {% block content %}
 {% load user_filters %}
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="card">
                 <div class="card-header">
-                    {% if post %}Форма для редактирования записи{% else %}Форма для создания записи{% endif %}
+                    {% if post %}Редактирование записи{% else %}Добавление новой записи{% endif %}
                 </div>
                 <div class="card-body">
                     <form method="post" enctype="multipart/form-data">
@@ -25,9 +25,9 @@
                                 {% endif %}>
                                 <label 
                                     for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}
-                                        {% if field.field.required %}
-                                            <span class="required">*</span>
-                                        {% endif %}
+                                    {% if field.field.required %}
+                                        <span class="required">*</span>
+                                    {% endif %}
                                 </label>
                                 <div class="col-md-6">
 
@@ -40,7 +40,7 @@
                             </div>
                         {% endfor %}
                         <button type="submit" class="btn btn-primary">
-                            {% if post %}Сохранить{% else %}Опубликовать{% endif %}
+                            {% if post %}Сохранить запись{% else %}Добавить запись{% endif %}
                         </button>
                     </form>
                 </div>
