--- a/templates/post_item.html
+++ b/templates/post_item.html
@@ -28,9 +28,15 @@
                     </div>
                 {% endif %}
                 <div>
+                    {% if user.is_authenticated %}
+                        <a class="small mr-3 btn btn-sm btn-primary" href="{% url 'post' post.author.username post.id %}" role="button">
+                            Добавить комментарий
+                        </a>
+                    {% else %}
                     <a class="small mr-3 btn btn-sm btn-primary" href="{% url 'post' post.author.username post.id %}" role="button">
-                        Добавить комментарий
+                        Комментарии
                     </a>
+                    {% endif %}
                 </div>
                 <!-- Ссылка на редактирование поста для автора -->
                 {% if user == post.author %}
