--- a/templates/post_sidebar.html
+++ b/templates/post_sidebar.html
@@ -9,7 +9,9 @@
             </div>
             <div class="h3 text-muted">
                 <!-- username автора -->
-                {{ author.username }}
+                <a href="{% url 'profile' author.username %}">
+                    @{{ author.username }}
+                </a>
             </div>
         </div>
         <ul class="list-group list-group-flush">
