--- a/templates/new.html
+++ b/templates/new.html
@@ -23,8 +23,10 @@
                                 {% else %}
                                     "false"
                                 {% endif %}>
-                                <label 
-                                    for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">{{ field.label }}
+                                <label
+                                for="{{ field.id_for_label }}"
+                                class="col-md-4 col-form-label text-md-right">
+                                    {{ field.label }}
                                     {% if field.field.required %}
                                         <span class="required">*</span>
                                     {% endif %}
