--- a/templates/post_item.html
+++ b/templates/post_item.html
@@ -28,20 +28,18 @@
                     </div>
                 {% endif %}
                 <div>
-                    {% if user.is_authenticated %}
-                        <a class="small mr-3 btn btn-sm btn-primary" href="{% url 'post' post.author.username post.id %}" role="button">
-                            Добавить комментарий
-                        </a>
-                    {% else %}
-                    <a class="small mr-3 btn btn-sm btn-primary" href="{% url 'post' post.author.username post.id %}" role="button">
-                        Комментарии
+                    <a class="small mr-3 btn btn-sm btn-primary"
+                    href="{% url 'post' post.author.username post.id %}"
+                    role="button">
+                        {% if user.is_authenticated %}Добавить комментарий{% else %}Комментарии{% endif %}
                     </a>
-                    {% endif %}
                 </div>
                 <!-- Ссылка на редактирование поста для автора -->
                 {% if user == post.author %}
                     <div>
-                        <a class="btn btn-sm btn-info" href="{% url 'post_edit' post.author.username post.id %}" role="button">
+                        <a class="btn btn-sm btn-info"
+                        href="{% url 'post_edit' post.author.username post.id %}"
+                        role="button">
                             Редактировать
                         </a>
                     </div>
