--- a/templates/group.html
+++ b/templates/group.html
@@ -3,30 +3,12 @@
     Записи сообщества {{ group.title }}
 {% endblock %}
   
-{% block content %}
-{% load thumbnail %}
-    <h1>{{ group.title }}</h1>
-    <p>
-        {{ group.description|linebreaksbr }}
-    </p>
-    {% for post in page %} 
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %} 
-            <img class="card-img" src="{{ im.url }}"> 
-        {% endthumbnail %} 
-        <h4> 
-            Автор: <a href="{% url 'profile' post.author.username %}">{{ post.author.get_full_name }}.</a> 
-            Дата публикации: {{ post.pub_date|date:"d M Y" }} 
-        </h4> 
-        <p>{{ post.text|linebreaksbr }}</p> 
-        <hr> 
-    {% endfor %} 
-
-    <!--{% for post in page %}
+    {% for post in page %}
         {% include "post_item.html" with post=post %}
     {% endfor %}
 
     {% if page.has_other_pages %}
         {% include "paginator.html" with items=page paginator=paginator %}
-    {% endif %}-->
+    {% endif %}
     
 {% endblock %}  
