--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
 {% load thumbnail %}
 {% load cache %}
 
+{% include "menu.html" with index=True %}
+
     {% cache 20 index page %}
         {% for post in page %}
             {% include "post_item.html" with post=post %}
