--- a/templates/post_sidebar.html
+++ b/templates/post_sidebar.html
@@ -17,8 +17,8 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
                 <div class="h6 text-muted">
-                    Подписчиков: XXX <br />
-                    Подписан: XXX
+                    {% if followers %}Подписчиков: {{ followers }}{% else %}Подписчиков: 0{% endif %} <br />
+                    {% if following %}Подписан: {{ following }}{% else %}Подписан: 0{% endif %}
                 </div>
             </li>
             <li class="list-group-item">
@@ -26,6 +26,21 @@
                     <!--Количество записей -->
                     Записей: {{ author.posts.count }}
                 </div>
+            </li>
+            <li class="list-group-item">
+                {% if follow %}
+                    <a class="btn btn-lg btn-light" 
+                    href="{% url 'profile_unfollow' author.username %}"
+                    role="button"> 
+                        Отписаться 
+                    </a> 
+                {% else %}
+                    <a class="btn btn-lg btn-primary" 
+                    href="{% url 'profile_follow' author.username %}"
+                    role="button">
+                        Подписаться 
+                    </a>
+                {% endif %}
             </li>
         </ul>
     </div>
